fix: align youtube logo

--- a/src/components/UI/YouTubeLogo/youtube-logo.module.scss
+++ b/src/components/UI/YouTubeLogo/youtube-logo.module.scss
@@ -1,3 +1,4 @@
 .logo {
-
+  margin-left: 2.9rem;
+  transform: translateY(2.5px);
 }
